--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.3.2",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^1.16.1",
     "react-dom": "^15.3.2"
   }
 }
